Opened 8 years ago
Closed 8 years ago
#13000 closed bug (fixed)
Column headers in icon view mode
Reported by: | humdinger | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev50574.
Try this:
- create a folder.
- open the folder and set to icon view mode. OK so far.
- close the window and re-open the folder:
There are now column headers that should only be there in list view mode, of course. Right-clicking into the header shows the familiar context menu. Adding/removing an attribute crashes Tracker (report attached).
Attachments (2)
Change History (6)
by , 8 years ago
Attachment: | iconview-columns.png added |
---|
by , 8 years ago
Attachment: | Tracker-788-debug-13-10-2016-11-26-08.report added |
---|
Tracker crashing when add/removing a column
comment:1 by , 8 years ago
comment:2 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 8 years ago
Status: | assigned → in-progress |
---|
Note:
See TracTickets
for help on using tickets.
Icon view with atrribute column headers