Tracker: Fix the TitleView appearing sometimes in icon-view folders.

It appears this would only happen when opening a new window (not an
existing one) for a folder that was set to icon-view.

Regression from hrev48734 (Layout API commit). Fixes #13000.